--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          </div>
       </div>
    </section>
-   <script src="./JS/app.js"></script>
+   <script src="./JS/p.js"></script>
 </body>
 
 </html>
